# ygo-core-python

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
tests/: __init__.py  test_deck.py
tests/card/: __init__.py  test_attribute.py  test_location.py  test_position.py  test_race.py  test_type.py
tests/card/generators/: __init__.py  __main__.py  attribute.py  location.py  position.py  race.py  type.py
ygo_core/: __init__.py  deck.py  duel.py  field.py  phase.py  zone.py
ygo_core/card/: __init__.py  attribute.py  card.py  location.py  position.py  race.py  type.py
ygo_core/enums/: __init__.py  attribute.py  linkmarker.py  location.py  phase.py  player.py  position.py  query.py  race.py  type.py
