[metadata]
name = ygo_core-python
version = attr: ygo_core.__version__
author = Shuhei Nitta
author_email = hinihatetsu@gmail.com
url = https://github.com/hinihatesu/ygo-core-python
description = YGO core package for Python
long_description = file: README.md
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.9
include_package_data = True
packages = find:
test_suite = tests
install_requires = 

[options.packages.find]
exclude = 
    tests

[mypy]
ignore_missing_imports = True
strict = True